# TensorTrap

./: .gitignore  CHANGELOG.md  LICENSE  PYPI_SETUP.md  README.md  RELEASE_NOTES_v1.1.0.md  TENSORTRAP_CONTEXT.md  TensorTrap_Daemon_Specification.md  TensorTrap_DiD_Specification.md  TensorTrap_MVP_Specification.md  ci.yml  publish-pypi.yml  pyproject.toml
.github/workflows/: autoformat.yml  build-executables.yml  ci.yml
For_Claude/: README.md  integration.py
For_Claude/tensortrap_merged/scanner/: __init__.py  context_analyzer.py  external_validators.py
docs/: CONTRIBUTING.md  SECURITY.md
reports/: README.md  benchmark_report.html
research_projects/: ai_ml_workflow_security_landscape.md  comfyui_security_findings.md  comfyui_workflow_execution_analysis.md
research_projects/disclosures/: RES4LYF_pickle_deserialization_advisory.md  comfyui_discord_security_council_message.md  frame_interpolation_supply_chain_issue.md  kjnodes_supply_chain_issue.md  m2dynamics_blog_post.md
src/tensortrap/: __init__.py  __main__.py  cli.py  config.py
src/tensortrap/formats/: __init__.py  gguf_parser.py  magic.py  onnx_parser.py  pickle_parser.py  pytorch_zip.py  safetensors_parser.py
src/tensortrap/output/: __init__.py  console.py  json_output.py  reports.py
src/tensortrap/scanner/: __init__.py  comfyui_scanner.py  context_analyzer.py  engine.py  external_validators.py  gguf_scanner.py  keras_scanner.py  obfuscation.py  onnx_scanner.py  pickle_scanner.py  polyglot_scanner.py  recommendations.py  results.py  safetensors_scanner.py  yaml_scanner.py
src/tensortrap/signatures/: __init__.py  dangerous_imports.py  patterns.py
src/tensortrap/web/: __init__.py  app.py  scheduler.py  service.py
src/tensortrap/web/static/: index.html
src/tensortrap/web/static/css/: style.css
src/tensortrap/web/static/js/: app.js
tests/: __init__.py  benchmark_comprehensive.py  conftest.py  test_benchmark_tensortrap.py  test_context_analyzer.py  test_engine.py  test_external_validators.py  test_gguf_scanner.py  test_mitra_polyglot_tests.py  test_new_scanners.py  test_pickle_scanner.py  test_polyglot_scanner.py  test_safetensors_scanner.py
