[project]
name = "tensortrap"
version = "0.3.1"
description = "Security scanner for AI/ML model files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "realmarauder", email = "smichael.us@gmail.com"}
]
keywords = ["security", "ai", "ml", "machine-learning", "scanner", "pickle", "safetensors", "gguf", "malware", "comfyui", "swarmui", "huggingface", "civitai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/realmarauder/TensorTrap"
Documentation = "https://github.com/realmarauder/TensorTrap#readme"
Repository = "https://github.com/realmarauder/TensorTrap"
Issues = "https://github.com/realmarauder/TensorTrap/issues"
Changelog = "https://github.com/realmarauder/TensorTrap/blob/main/CHANGELOG.md"

[project.scripts]
tensortrap = "tensortrap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tensortrap"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/tensortrap/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
